--- a/exercises/59 - Slider/package.json
+++ b/exercises/59 - Slider/package.json
@@ -9,9 +9,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "parcel-bundler": "^1.12.3",
     "sass": "^1.23.3"
-  },
-  "dependencies": {
-    "parcel": "^1.12.4"
   }
 }
